src/objects/FieloAlpha__Component__c.object
<CustomObject>
    <description>The elements that make up the pages in the members’ portal. Examples of components are “Menu”, “Content”, “Content Feed”, “Banner”, etc.</description>
    <fields>
        <fullName>FieloPLT__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__BannerPlacement__c</fullName>
        <description>Field to filter banners when using a Banner widget.</description>
        <label>Banner placement</label>
        <picklist>
            <picklistValues>
                <fullName>Home Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Side</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__CCS__c</fullName>
        <description>CSS code to modify the look and formatting of this component.</description>
        <inlineHelpText>Enter a CSS code that will modify this component.</inlineHelpText>
        <label>CSS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__CSSClasses__c</fullName>
        <description>Here the CSS classes for the corresponding component will be stored.</description>
        <inlineHelpText>Enter the CSS classes for the corresponding component.</inlineHelpText>
        <label>CSS Classes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Category of the items you want to be shown by this component.</description>
        <inlineHelpText>Select the category that will be shown by this component.</inlineHelpText>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloPLT__Category__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Category Group, Category Item</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloPLT__Category__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ContentHTML__c</fullName>
        <description>An HTML code that will be rendered as content. This field overrules the Content field above.</description>
        <inlineHelpText>Enter an HTML code that will be rendered as content. This field overrules the Content field above.</inlineHelpText>
        <label>HTML Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Content__c</fullName>
        <description>A content consisting of rich text and images that will be showed in the members&apos; portal.</description>
        <inlineHelpText>Enter text and images.</inlineHelpText>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Delay__c</fullName>
        <description>The time in milliseconds that this image will be showed.</description>
        <inlineHelpText>Set the time, in milliseconds, for each image to be shown.</inlineHelpText>
        <label>Delay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Desktop__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make the component show in a desktop computer.</description>
        <inlineHelpText>Check this option if you want this component to be shown in a desktop computer.</inlineHelpText>
        <label>Desktop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Display__c</fullName>
        <description>Deleted</description>
        <label>Display</label>
        <picklist>
            <controllingField>FieloPLT__Layout__c</controllingField>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accordion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrollbars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Scrollbars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__FieldSet2__c</fullName>
        <label>Field Set 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__FieldSet__c</fullName>
        <label>FieldSet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Filter2__c</fullName>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Filter</label>
        <picklist>
            <picklistValues>
                <fullName>FieloExtraTag_allPrizes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FieloExtraTag_myPrizes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FieloExtraTag_wishList</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FieloExtraTag_mostRecent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FieloExtraTag_mostVoted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FieloExtraTag_mostPolular</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__FilterBySegment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The segment of members to which this item will be showed.</description>
        <inlineHelpText>Pick the segments you want to show this item to.</inlineHelpText>
        <label>Filter By Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__FilterFormula__c</fullName>
        <formula>IF (      ( NOT( ISBLANK( FieloPLT__Tag__c ) ) &amp;&amp;   ISPICKVAL(FieloPLT__Filter2__c, &apos;&apos;)  ) ,             FieloPLT__Tag__c,               IF( ( ISBLANK( FieloPLT__Tag__c ) &amp;&amp;    NOT( ISPICKVAL(FieloPLT__Filter2__c, &apos;&apos;)    )  ) ,                              TEXT(  FieloPLT__Filter2__c ),                                     IF(                                         ( NOT( ISBLANK( FieloPLT__Tag__c ) ) &amp;&amp;  NOT( ISPICKVAL(FieloPLT__Filter2__c, &apos;&apos;)  )   )  ,                                          FieloPLT__Tag__c,&apos;&apos;)       ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filter Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Filter__c</fullName>
        <description>This field will be populated by the trigger and it will contain the CSS classes depending on the visibility of the Component by device.</description>
        <label>Display Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Height__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Component Height</description>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Layout__c</fullName>
        <label>Layout</label>
        <picklist>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Row</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Column</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__MenuRedirect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Menu Redirect</label>
        <referenceTo>FieloPLT__Menu__c</referenceTo>
        <relationshipLabel>Components (Menu Redirect)</relationshipLabel>
        <relationshipName>Components1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Menu__c</fullName>
        <label>Menu</label>
        <referenceTo>FieloPLT__Menu__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Mobile__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make the component show in a cell phone.</description>
        <inlineHelpText>Check this option for making this component visible in a mobile device.</inlineHelpText>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Modal__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Deprecated Field</description>
        <label>Use URL Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__NewsCategory__c</fullName>
        <label>Content feed category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__NewsType__c</fullName>
        <label>Content feed type</label>
        <picklist>
            <picklistValues>
                <fullName>News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__OptionalName__c</fullName>
        <description>A title that will be showed on top of the component.</description>
        <inlineHelpText>Enter a title to be showed on top of the component.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__OrderBy__c</fullName>
        <description>The order in which rewards are showed in the catalog.</description>
        <inlineHelpText>Choose the order criteria for rewards.</inlineHelpText>
        <label>Order By</label>
        <picklist>
            <picklistValues>
                <fullName>Name - Points</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Points - Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Points</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Order__c</fullName>
        <description>The order in which the components are placed in the section.</description>
        <inlineHelpText>Select the order in which the components are placed in the section.</inlineHelpText>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__PageName__c</fullName>
        <label>Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Paging__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will show a paging section for the component. If left unchecked, all items will show in a single page.</description>
        <inlineHelpText>Check this option if you want a paging section.</inlineHelpText>
        <label>Paging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Qant__c</fullName>
        <description>Number of items to be showed in a page.</description>
        <inlineHelpText>Set the number of items to show per page.</inlineHelpText>
        <label>Items per Page</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Qcolumns__c</fullName>
        <description>The number of columns in the grid view.</description>
        <inlineHelpText>Set the number of columns (for the grid view only).</inlineHelpText>
        <label>Number of Columns</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Qrows__c</fullName>
        <description>The number of rows in the grid view.</description>
        <inlineHelpText>Set the number of rows (for the Grid view only).</inlineHelpText>
        <label>Number of Rows</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Section to which the component belongs</description>
        <label>Section</label>
        <referenceTo>FieloPLT__Section__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Tablet__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make the component show in a tablet computer.</description>
        <inlineHelpText>Check this option for making this component visible in a tablet computer.</inlineHelpText>
        <label>Tablet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tag of the items you want to be shown by this component.</description>
        <inlineHelpText>Select the tag that will be shown by this component.</inlineHelpText>
        <label>Tag</label>
        <referenceTo>FieloPLT__Tag__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__TransactionType__c</fullName>
        <label>Transaction Type</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Type__c</fullName>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Slider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Row</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Column</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Width__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Component Width</description>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Component</pluralLabel>
    <recordTypes>
        <fullName>FieloPLT__Badges</fullName>
        <active>true</active>
        <label>Badges</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Banner</fullName>
        <active>true</active>
        <label>Banner</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__BannerWidget</fullName>
        <active>true</active>
        <label>Banner Widget</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Branchs</fullName>
        <active>true</active>
        <label>Branches</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Breadcrumb</fullName>
        <active>false</active>
        <label>Breadcrumb</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Catalog</fullName>
        <active>true</active>
        <label>Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Categories</fullName>
        <active>true</active>
        <label>Categories</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Content</fullName>
        <active>true</active>
        <label>Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__ContentWidget</fullName>
        <active>true</active>
        <label>Content Widget</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__GetPoints</fullName>
        <active>true</active>
        <label>GetPoints</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__IncludePage</fullName>
        <active>true</active>
        <label>Include Page</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Login</fullName>
        <active>true</active>
        <label>Login</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Menu</fullName>
        <active>true</active>
        <label>Menu</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__News</fullName>
        <active>true</active>
        <label>Content Feed</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Profile</fullName>
        <active>true</active>
        <label>Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Redemptions</fullName>
        <active>true</active>
        <label>Redemptions</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Register</fullName>
        <active>true</active>
        <label>Register</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Search</fullName>
        <active>false</active>
        <label>Search</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__ShoppingCart</fullName>
        <active>false</active>
        <label>ShoppingCart</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__Transactions</fullName>
        <active>true</active>
        <label>Transactions</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>